# typemap

./: .clang-tidy  .clangd  .gitignore  .skipcheck.txt  CMakeLists.txt  CMakePresets.json  README.md
cmake/: colored_output.cmake
samples/: CMakeLists.txt  examples.cpp
staticmap/: CMakeLists.txt
staticmap/include/staticmap/: item.hpp  item_kind.hpp  iterator.hpp  iterator_kind.hpp  staticmap.hpp  staticmap_kind.hpp  utility.hpp
tests/: CMakeLists.txt
tests/src/: iterator_tests.cpp  staticmap_test.cpp  tests.cpp
tests/src/item/: item_assign_test.cpp  item_ctor_test.cpp  item_equality_test.cpp  item_iscompatible_test.cpp
tests/src/iterator/: iterator_test.cpp  iterator_tests.cpp
tests/src/staticmap/: make_saticmap_test.cpp  staticmap_at_test.cpp  staticmap_clear_test.cpp  staticmap_contains_test.cpp  staticmap_ctor_test.cpp  staticmap_equality.cpp  staticmap_filter_test.cpp  staticmap_finditem_test.cpp  staticmap_foreach_test.cpp  staticmap_foreachindexed_test.cpp  staticmap_get_test.cpp  staticmap_items_test.cpp  staticmap_keys.cpp  staticmap_merge_test.cpp  staticmap_set_test.cpp  staticmap_test.cpp  staticmap_update_test.cpp  staticmap_vals.cpp
typemap/: CMakeLists.txt
typemap/include/typemap/: item.hpp
